bdr.BDR2.scala.error
Compilation error:
BDR2:36: error: not found: value finished
  finished = true;
  ^